<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Netsound</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Escribe tu nombre:</string>
    <string name="email">Escribe tu email:</string>
    <string name="login_user">Usuario</string>
    <string name="login_pwd">Contraseña</string>  
    <string name="login">Iniciar sesión</string>  
    <string name="signup">Registrate</string> 
    <string name="signup_user">Sign up</string>  
    <string name="signup_name">Log in</string>  
    <string name="signup_pwd">Escribe una contraseña</string>
    <string name="signup_pwd2">Vuelva a introducir la contraseña</string>
    <string name="title_activity_signin">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_main">Home</string>
    <string name="or">¿Eres nuevo en Netsound?</string>
    
    

</resources>
